force-app/main/default/objects/Account/fields/Accounting_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Reference_Date__c</fullName>
    <description>The Accounting Reference Date (ARD) of the company, or the end of the company&apos;s financial year. This only contains a Month and Day (no year)</description>
    <label>Accounting Reference Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>