force-app/main/default/objects/Account/fields/Accounts_Last_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Last_Made_Up_To__c</fullName>
    <description>The date the last company accounts were made up to.</description>
    <label>Accounts Last Made Up To</label>
    <type>Date</type>
</CustomField>