force-app/main/default/objects/Account/fields/Accounts_Next_Due_By__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Next_Due_By__c</fullName>
    <description>The date the next company accounts are due for filing.</description>
    <label>Accounts Next Due By</label>
    <type>Date</type>
</CustomField>