force-app/main/default/objects/Account/fields/Accounts_Next_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Next_Made_Up_To__c</fullName>
    <description>The date the next company accounts should be made up to. See &quot;Next Accounts Due By&quot; for the filing deadline</description>
    <label>Accounts Next Made Up To</label>
    <type>Date</type>
</CustomField>