force-app/main/default/objects/Account/fields/Accounts_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the company accounts are overdue for filing</description>
    <label>Accounts Overdue?</label>
    <type>Checkbox</type>
</CustomField>