force-app/main/default/objects/Account/fields/Address_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Address_Snippet__c</fullName>
    <description>A single line address. This will be the address that matched within the indexed document or the primary address otherwise (as returned by the address member).</description>
    <label>Address Snippet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>