force-app/main/default/objects/Account/fields/Annual_Return_Last_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Annual_Return_Last_Made_Up_To__c</fullName>
    <description>The date the last annual return was made up to. This is only returned if a confirmation statement has not be filed.</description>
    <label>Annual Return Last Made Up To</label>
    <type>Date</type>
</CustomField>