force-app/main/default/objects/Account/fields/Annual_Return_Next_Due__c.field-meta.xml
<CustomField>
    <fullName>Annual_Return_Next_Due__c</fullName>
    <description>The date the next annual return is due. This member will only be returned if a confirmation statement has not been filed and the date is before 28th July 2016, otherwise refer to &quot;Confirmation Statement Next Due&quot;</description>
    <label>Annual Return Next Due</label>
    <type>Date</type>
</CustomField>