force-app/main/default/objects/Account/fields/Annual_Return_Next_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Annual_Return_Next_Made_Up_To__c</fullName>
    <description>The date the next annual return should be made up to. This will only be returned if a confirmation statement has not been filed and the date is before 30th July 2016, otherwise refer to &quot;Confirmation Statement Next Made Up To&quot;</description>
    <label>Annual Return Next Made Up To</label>
    <type>Date</type>
</CustomField>