force-app/main/default/objects/Account/fields/Annual_Return_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Return_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the annual return is overdue.</description>
    <label>Annual Return Overdue?</label>
    <type>Checkbox</type>
</CustomField>