force-app/main/default/objects/Account/fields/Can_File__c.field-meta.xml
<CustomField>
    <fullName>Can_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether this company can file.</description>
    <label>Can File?</label>
    <type>Checkbox</type>
</CustomField>