force-app/main/default/objects/Account/fields/Companies_House_Number__c.field-meta.xml
<CustomField>
    <fullName>Companies_House_Number__c</fullName>
    <description>The company registration / incorporation number of the company. This is the unique identifies that ties to the Companies House</description>
    <externalId>true</externalId>
    <label>Companies House Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>