force-app/main/default/objects/Account/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <description>The company Status registered in the Companies House database</description>
    <label>Company Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>closed</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>converted-closed</fullName>
                <label>Converted / Closed</label>
            </value>
            <value>
                <fullName>dissolved</fullName>
                <label>Dissolved</label>
            </value>
            <value>
                <fullName>administration</fullName>
                <label>In Administration</label>
            </value>
            <value>
                <fullName>insolvency-proceedings</fullName>
                <label>Insolvency Proceedings</label>
            </value>
            <value>
                <fullName>liquidation</fullName>
                <label>Liquidation</label>
            </value>
            <value>
                <fullName>open</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>receivership</fullName>
                <label>Receivership</label>
            </value>
            <value>
                <fullName>registered</fullName>
                <label>Registered</label>
            </value>
            <value>
                <fullName>removed</fullName>
                <label>Removed</label>
            </value>
            <value>
                <fullName>voluntary-arrangement</fullName>
                <label>Voluntary Arrangement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>