force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>The Company Type registered in the Companies House Database</description>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>assurance-company</fullName>
                <label>Assurance company</label>
            </value>
            <value>
                <fullName>charitable-incorporated-organisation</fullName>
                <label>Charitable incorporated organisation</label>
            </value>
            <value>
                <fullName>converted-or-closed</fullName>
                <label>Converted / closed</label>
            </value>
            <value>
                <fullName>northern-ireland-other</fullName>
                <label>Credit union (Northern Ireland)</label>
            </value>
            <value>
                <fullName>eeig</fullName>
                <label>European Economic Interest Grouping Establishment (EEIG)</label>
            </value>
            <value>
                <fullName>european-public-limited-liability-company-se</fullName>
                <label>European public limited liability company (SE)</label>
            </value>
            <value>
                <fullName>further-education-or-sixth-form-college-corporation</fullName>
                <label>Further education or sixth form college corporation</label>
            </value>
            <value>
                <fullName>industrial-and-provident-society</fullName>
                <label>Industrial and Provident society</label>
            </value>
            <value>
                <fullName>icvc-warrant</fullName>
                <label>Investment company with umbrella capital</label>
            </value>
            <value>
                <fullName>icvc-securities</fullName>
                <label>Investment company with variable capital</label>
            </value>
            <value>
                <fullName>investment-company-with-variable-capital</fullName>
                <label>Investment company with variable  capital</label>
            </value>
            <value>
                <fullName>icvc-umbrella</fullName>
                <label>Investment company with  variable capital</label>
            </value>
            <value>
                <fullName>llp</fullName>
                <label>Limited liability partnership</label>
            </value>
            <value>
                <fullName>limited-partnership</fullName>
                <label>Limited partnership</label>
            </value>
            <value>
                <fullName>northern-ireland</fullName>
                <label>Northern Ireland company</label>
            </value>
            <value>
                <fullName>old-public-company</fullName>
                <label>Old public company</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other company type</label>
            </value>
            <value>
                <fullName>oversea-company</fullName>
                <label>Overseas company</label>
            </value>
            <value>
                <fullName>registered-overseas-entity</fullName>
                <label>Overseas entity</label>
            </value>
            <value>
                <fullName>private-limited-guarant-nsc</fullName>
                <label>Private limited by guarantee without share capital</label>
            </value>
            <value>
                <fullName>ltd</fullName>
                <label>Private limited company</label>
            </value>
            <value>
                <fullName>private-limited-shares-section-30-exemption</fullName>
                <label>Private Limited Company, use of &apos;Limited&apos; exemption</label>
            </value>
            <value>
                <fullName>private-limited-guarant-nsc-limited-exemption</fullName>
                <label>Private Limited Company by guarantee without share capital, use of &apos;Limited&apos; exemption</label>
            </value>
            <value>
                <fullName>private-unlimited</fullName>
                <label>Private unlimited company</label>
            </value>
            <value>
                <fullName>private-unlimited-nsc</fullName>
                <label>Private unlimited company without share capital</label>
            </value>
            <value>
                <fullName>protected-cell-company</fullName>
                <label>Protected cell company</label>
            </value>
            <value>
                <fullName>plc</fullName>
                <label>Public limited company</label>
            </value>
            <value>
                <fullName>registered-society-non-jurisdictional</fullName>
                <label>Registered society</label>
            </value>
            <value>
                <fullName>royal-charter</fullName>
                <label>Royal charter company</label>
            </value>
            <value>
                <fullName>scottish-charitable-incorporated-organisation</fullName>
                <label>Scottish charitable incorporated organisation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>