force-app/main/default/objects/Account/fields/Confirmation_Last_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Last_Made_Up_To__c</fullName>
    <description>The date to which the company last made a confirmation statement.</description>
    <label>Confirmation Last Made Up To</label>
    <type>Date</type>
</CustomField>