force-app/main/default/objects/Account/fields/Confirmation_Next_Due_By__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Next_Due_By__c</fullName>
    <description>The date by which the next confirmation statement must be received.</description>
    <label>Confirmation Next Due By</label>
    <type>Date</type>
</CustomField>