force-app/main/default/objects/Account/fields/Confirmation_Next_Made_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Next_Made_Up_To__c</fullName>
    <description>The date to which the company must next make a confirmation statement.</description>
    <label>Confirmation Next Made Up To</label>
    <type>Date</type>
</CustomField>