force-app/main/default/objects/Account/fields/Confirmation_Statement_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Statement_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the confirmation statement is overdue</description>
    <label>Confirmation Statement Overdue?</label>
    <type>Checkbox</type>
</CustomField>