force-app/main/default/objects/Account/fields/Date_of_Cessation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Cessation__c</fullName>
    <description>The date the company ended.</description>
    <label>Date of Cessation</label>
    <type>Date</type>
</CustomField>