force-app/main/default/objects/Account/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The Company Search result description. See Description Identifier field for type of search description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>