force-app/main/default/objects/Account/fields/Has_Been_Liquidated__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Liquidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag indicating if the company has been liquidated in the past.</description>
    <label>Has Been Liquidated?</label>
    <type>Checkbox</type>
</CustomField>