force-app/main/default/objects/Account/fields/Has_Charges__c.field-meta.xml
<CustomField>
    <fullName>Has_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag indicating if the company has any charges.</description>
    <label>Has Charges?</label>
    <type>Checkbox</type>
</CustomField>