force-app/main/default/objects/Account/fields/Has_Insolvency_History__c.field-meta.xml
<CustomField>
    <fullName>Has_Insolvency_History__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag indicating if the company has insolvency history.</description>
    <label>Has Insolvency History?</label>
    <type>Checkbox</type>
</CustomField>