force-app/main/default/objects/Account/fields/Is_Community_Interest_Company__c.field-meta.xml
<CustomField>
    <fullName>Is_Community_Interest_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The flag indicating if the company is a Community Interest Company.</description>
    <label>Is Community Interest Company?</label>
    <type>Checkbox</type>
</CustomField>