force-app/main/default/objects/Account/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <description>The jurisdiction specifies the political body responsible for the company.</description>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>england-wales</fullName>
                <label>England/Wales</label>
            </value>
            <value>
                <fullName>wales</fullName>
                <label>Wales</label>
            </value>
            <value>
                <fullName>scotland</fullName>
                <label>Scotland</label>
            </value>
            <value>
                <fullName>northern-ireland</fullName>
                <label>Northern Ireland</label>
            </value>
            <value>
                <fullName>european-union</fullName>
                <label>European Union</label>
            </value>
            <value>
                <fullName>united-kingdom</fullName>
                <label>United Kingdom</label>
            </value>
            <value>
                <fullName>england</fullName>
                <label>England</label>
            </value>
            <value>
                <fullName>noneu</fullName>
                <label>Non EU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>