force-app/main/default/objects/Account/fields/Last_Account_Type_Filed__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Type_Filed__c</fullName>
    <description>The type of the last company accounts filed. The is the account type associated with the &quot;Accounts Last Made Up To&quot; date field</description>
    <label>Last Account Type Filed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>audited-abridged</fullName>
                <label>Audited abridged</label>
            </value>
            <value>
                <fullName>audit-exemption-subsidiary</fullName>
                <label>Audit Exemption Subsidiary</label>
            </value>
            <value>
                <fullName>available</fullName>
            </value>
            <value>
                <fullName>dormant</fullName>
                <label>Dormant</label>
            </value>
            <value>
                <fullName>filing-exemption-subsidiary</fullName>
                <label>Filing Exemption Subsidiary</label>
            </value>
            <value>
                <fullName>full</fullName>
                <label>Full</label>
            </value>
            <value>
                <fullName>group</fullName>
                <label>Group</label>
            </value>
            <value>
                <fullName>initial</fullName>
                <label>Initial</label>
            </value>
            <value>
                <fullName>interim</fullName>
                <label>Interim</label>
            </value>
            <value>
                <fullName>medium</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>micro-entity</fullName>
                <label>Micro Entity</label>
            </value>
            <value>
                <fullName>no-accounts-type</fullName>
                <label>No accounts type available</label>
            </value>
            <value>
                <fullName>partial-exemption</fullName>
                <label>Partial Exemption</label>
            </value>
            <value>
                <fullName>small</fullName>
                <label>Small</label>
            </value>
            <value>
                <fullName>total-exemption-full</fullName>
                <label>Total Exemption Full</label>
            </value>
            <value>
                <fullName>total-exemption-small</fullName>
                <label>Total Exemption Small</label>
            </value>
            <value>
                <fullName>unaudited-abridged</fullName>
                <label>Unaudited abridged</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>