force-app/main/default/objects/Account/fields/Registered_Office_Address_Is_In_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Address_Is_In_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating registered office address as been replaced.</description>
    <label>Registered Office Address Is In Dispute?</label>
    <type>Checkbox</type>
</CustomField>