force-app/main/default/objects/Account/fields/Undeliverable_Registered_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Undeliverable_Registered_Office_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating whether post can be delivered to the registered office.</description>
    <label>Undeliverable Registered Office Address</label>
    <type>Checkbox</type>
</CustomField>